include directory for static build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,9 @@ endif()
 # Add the include directories of standard SDL3 for static library.
 target_include_directories(${PROJECT_NAME}_Static PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}/../SDL/include"
+    "${CMAKE_CURRENT_SOURCE_DIR}"
 )
+
 ################################################################################
 # Dependencies
 ################################################################################
